--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^10.0.0",
+    "hapi-resource": "0.0.2",
     "socket.io": "^1.3.6",
-    "walmart": "0.0.4"
+    "walmart": "0.0.4",
+    "watson-developer-cloud": "^0.10.4"
   }
 }
